--- a/math.sty
+++ b/math.sty
@@ -1,145 +1,108 @@
-% ---------- Brackets ----------
+%% Brackets
 
 \newcommand{\bc}[1]{\left\lbrace #1 \right\rbrace} 
 \newcommand{\bp}[1]{\left( #1 \right)} 
 \newcommand{\bs}[1]{\left[ #1 \right]} 
-\newcommand{\of}[1]{{\left( #1 \right)}} % Parentheses without surrounding space, for function arguments
 \newcommand{\abs}[1]{\left\lvert #1 \right\rvert}
 \newcommand{\norm}[1]{\left\lVert #1 \right\rVert}
 \newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
+\newcommand{\of}[1]{{\left( #1 \right)}}
 
-% ---------- Accents ----------
-
-\newcommand{\ol}[1]{\overline{#1}}
-\newcommand{\ul}[1]{\underline{#1}}
-\newcommand{\wh}[1]{\widehat{#1}}
-\newcommand{\wt}[1]{\widetilde{#1}}
-
-% ---------- Operators ----------
+%% Operators
 
 \usepackage{xparse}
 
-% Natural log operator:
-% * \ln produces ln
-% * \ln{x} produces ln(x)
+% Logarithm
 \let\oldln\ln
 \RenewDocumentCommand{\ln}{g}{\IfNoValueTF{#1}{\oldln}{\,{\oldln}{\bp{#1}}}}
 
-% Exponential operator:
-% * \exp produces exp
-% * \exp{x} produces exp(x)
+% Exponential
 \let\oldexp\exp
 \RenewDocumentCommand{\exp}{g}{\IfNoValueTF{#1}{\oldexp}{\,{\oldexp}{\bp{#1}}}}
 
-% Max operator:
-% * \max produces max
-% * \max[x] produces max_x
-% * \max{y} produces max{y}
-% * \max[x]{y} produces max_x{y}
+% Indicator
+\NewDocumentCommand{\ind}{g}{%
+\IfNoValueTF{#1}{\operatorname{\mathbb{1}}}%
+{\,\mathbb{1}{\bp{#1}}}}
+
+% Trace
+\NewDocumentCommand{\tr}{g}{%
+\IfNoValueTF{#1}{\operatorname{tr}}%
+{\,{\operatorname{tr}}{\bp{#1}}}}
+
+% Variance
+\NewDocumentCommand{\var}{g}{%
+\IfNoValueTF{#1}{\operatorname{var}}%
+{\,{\operatorname{var}}{\bp{#1}}}}
+
+% Covariance
+\NewDocumentCommand{\cov}{g}{%
+\IfNoValueTF{#1}{\operatorname{cov}}%
+{\,{\operatorname{cov}}{\bp{#1}}}}
+
+% Correlation
+\NewDocumentCommand{\corr}{g}{%
+\IfNoValueTF{#1}{\operatorname{corr}}%
+{\,{\operatorname{corr}}{\bp{#1}}}}
+
+% Standard deviation
+\NewDocumentCommand{\sd}{g}{%
+\IfNoValueTF{#1}{\operatorname{sd}}%
+{\,{\operatorname{sd}}{\bp{#1}}}}
+
+% Standard error
+\NewDocumentCommand{\se}{g}{%
+\IfNoValueTF{#1}{\operatorname{se}}%
+{\,{\operatorname{se}}{\bp{#1}}}}
+
+% Maximum
 \let\oldmax\max
 \RenewDocumentCommand{\max}{o g}{%
 \IfNoValueTF{#2}{\oldmax\IfValueT{#1}{_{#1}}}%
 {\,{\oldmax\IfValueT{#1}{_{#1}}}{\bc{#2}}}}
 
-% Min operator:
-% * \min produces min
-% * \min[x] produces min_x
-% * \min{y} produces min{y}
-% * \min[x]{y} produces min_x{y}
+% Argmax
+\DeclareMathOperator*{\argmax}{argmax}
+
+% Minimum
 \let\oldmin\min
 \RenewDocumentCommand{\min}{o g}{%
 \IfNoValueTF{#2}{\oldmin\IfValueT{#1}{_{#1}}}%
 {\,{\oldmin\IfValueT{#1}{_{#1}}}{\bc{#2}}}}
 
-% Expectation operator:
-% * \E produces E
-% * \E[x] produces E_x
-% * \E{Y} produces E(Y)
-% * \E[x]{Y} produces E_x(Y)
+% Argmin
+\DeclareMathOperator*{\argmin}{argmin}
+
+% Expectation
 \NewDocumentCommand{\E}{o g}{%
 \IfNoValueTF{#2}{\operatorname{\mathbb{E}}\IfValueT{#1}{_{#1}}}%
 {\,\mathbb{E}\IfValueT{#1}{_{#1}}{\bp{#2}}}}
 
-% Probability operator:
-% * \P produces P
-% * \P[x] produces P_x
-% * \P{Y} produces P(Y)
-% * \P[x]{Y} produces P_x(Y)
+% Probability
 \RenewDocumentCommand{\P}{o g}{%
 \IfNoValueTF{#2}{\operatorname{\mathbb{P}}\IfValueT{#1}{_{#1}}}%
 {\,\mathbb{P}\IfValueT{#1}{_{#1}}{\bp{#2}}}}
 
-% Indicator operator:
-% * \ind produces 1
-% * \ind{Y} produces 1(Y)
-\NewDocumentCommand{\ind}{g}{%
-\IfNoValueTF{#1}{\operatorname{\mathbb{1}}}%
-{\,\mathbb{1}{\bp{#1}}}}
-
-% Trace operator:
-% * \tr produces tr
-% * \tr{Y} produces tr(Y)
-\NewDocumentCommand{\tr}{g}{%
-\IfNoValueTF{#1}{\operatorname{tr}}%
-{\,{\operatorname{tr}}{\bp{#1}}}}
-
-% Variance operator:
-% * \var produces var
-% * \var{Y} produces var(Y)
-\NewDocumentCommand{\var}{g}{%
-\IfNoValueTF{#1}{\operatorname{var}}%
-{\,{\operatorname{var}}{\bp{#1}}}}
-
-% Covariance operator:
-% * \cov produces cov
-% * \cov{Y} produces cov(Y)
-\NewDocumentCommand{\cov}{g}{%
-\IfNoValueTF{#1}{\operatorname{cov}}%
-{\,{\operatorname{cov}}{\bp{#1}}}}
-
-% Correlation operator:
-% * \corr produces corr
-% * \corr{Y} produces corr(Y)
-\NewDocumentCommand{\corr}{g}{%
-\IfNoValueTF{#1}{\operatorname{corr}}%
-{\,{\operatorname{corr}}{\bp{#1}}}}
-
-% Standard deviation operator:
-% * \sd produces sd
-% * \sd{Y} produces sd(Y)
-\NewDocumentCommand{\sd}{g}{%
-\IfNoValueTF{#1}{\operatorname{sd}}%
-{\,{\operatorname{sd}}{\bp{#1}}}}
-
-% Standard error operator:
-% * \se produces se
-% * \se{Y} produces se(Y)
-\NewDocumentCommand{\se}{g}{%
-\IfNoValueTF{#1}{\operatorname{se}}%
-{\,{\operatorname{se}}{\bp{#1}}}}
-
-\DeclareMathOperator*{\argmax}{argmax}
-\DeclareMathOperator*{\argmin}{argmin}
-\DeclareMathOperator*{\ess}{ess}
-\renewcommand{\Re}{\operatorname{Re}}
-\renewcommand{\Im}{\operatorname{Im}}
-\newcommand{\iid}{\mathbin{\overset{iid}{\sim}}}
-\newcommand{\as}{\mathbin{\overset{as}{\to}}}
-
-% ---------- Derivatives ----------
+%% Derivatives
 
 \newcommand{\pd}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\pdx}[2]{\partial #1/\partial #2}
+\newcommand{\pdk}[3]{\left.\frac{\partial #1}{\partial #2}\right\vert_{#3}} 
+\newcommand{\pdkx}[3]{\left.\partial #1/\partial #2\right\vert_{#3}}
 \newcommand{\od}[2]{\frac{d #1}{d #2}}
 \newcommand{\odx}[2]{d #1/d #2}
-\newcommand{\pdl}[2]{\frac{\partial\ln{#1}}{\partial\ln{#2}}}
-\newcommand{\pdlx}[2]{\partial\ln(#1)/\partial\ln(#2)}
-\newcommand{\odl}[2]{\frac{d\ln{#1}}{d\ln{#2}}}
-\newcommand{\odlx}[2]{d\ln(#1)/d\ln(#2)}
-\newcommand{\pdw}[3]{\left.\frac{\partial #1}{\partial #2}\right\vert_{#3}} 
-\newcommand{\pdwx}[3]{\left.\partial #1/\partial #2\right\vert_{#3}}
+\newcommand{\pe}[2]{\frac{\partial\ln{#1}}{\partial\ln{#2}}}
+\newcommand{\oe}[2]{\frac{d\ln{#1}}{d\ln{#2}}}
+\newcommand{\pex}[2]{\partial\ln(#1)/\partial\ln(#2)}
+\newcommand{\oex}[2]{d\ln(#1)/d\ln(#2)}
 
-% ---------- Blackboard letters ----------
+%% Statistical commands
+
+\DeclareMathOperator*{\ess}{ess}
+\newcommand{\iid}{\mathbin{\overset{iid}{\sim}}}
+\newcommand{\as}{\mathbin{\overset{as}{\to}}}
+
+%% Blackboard letters
 
 \def\R{\mathbb{R}}
 \def\N{\mathbb{N}}
@@ -148,42 +111,7 @@
 \def\C{\mathbb{C}}
 \def\I{\mathbb{I}}
 
-% ---------- Greek letters ----------
-
-\def\a{\alpha}
-\def\b{\beta}
-\def\c{\chi}
-\def\d{\delta}
-\def\D{\Delta}
-\def\uD{\upDelta} % \Delta as an operator (ISO)
-\def\e{\epsilon}
-\def\f{\phi}
-\def\vf{\varphi}
-\def\F{\Phi}
-\def\g{\gamma}
-\def\G{\Gamma}
-\def\h{\eta}
-\def\k{\kappa}
-\def\l{\lambda}
-\def\L{\Lambda}
-\def\m{\mu}
-\def\n{\nu}
-\def\o{\omega}
-\def\O{\Omega}
-\def\vp{\varpi}
-\def\p{\psi}
-\def\r{\rho}
-\def\s{\sigma}
-\def\vs{\varsigma}
-\def\S{\Sigma}
-\def\t{\theta}
-\def\T{\Theta}
-\def\vt{\vartheta}
-\def\x{\xi}
-\def\X{\Xi}
-\def\z{\zeta}
-
-% ---------- Caligraphic letters ----------
+%% Caligraphic letters
 
 \def\Ac{\mathcal{A}}
 \def\Bc{\mathcal{B}}
@@ -211,3 +139,51 @@
 \def\Xc{\mathcal{X}}
 \def\Yc{\mathcal{Y}}
 \def\Zc{\mathcal{Z}}
+
+%% Greek letters
+
+\def\a{\alpha}
+\def\b{\beta}
+\def\c{\chi}
+\def\d{\delta}
+\def\D{\Delta}
+\def\uD{\upDelta}
+\def\e{\epsilon}
+\def\f{\phi}
+\def\vf{\varphi}
+\def\F{\Phi}
+\def\g{\gamma}
+\def\G{\Gamma}
+\def\h{\eta}
+\def\k{\kappa}
+\def\l{\lambda}
+\def\L{\Lambda}
+\def\m{\mu}
+\def\n{\nu}
+\def\o{\omega}
+\def\O{\Omega}
+\def\vp{\varpi}
+\def\p{\psi}
+\def\r{\rho}
+\def\s{\sigma}
+\def\vs{\varsigma}
+\def\S{\Sigma}
+\def\t{\theta}
+\def\T{\Theta}
+\def\vt{\vartheta}
+\def\x{\xi}
+\def\X{\Xi}
+\def\z{\zeta}
+
+%% Accents
+
+\newcommand{\ol}[1]{\overline{#1}}
+\newcommand{\ul}[1]{\underline{#1}}
+\newcommand{\wh}[1]{\widehat{#1}}
+\newcommand{\wt}[1]{\widetilde{#1}}
+
+%% Complex numbers
+
+\renewcommand{\Re}{\operatorname{Re}}
+\renewcommand{\Im}{\operatorname{Im}}
+
