--- a/math.sty
+++ b/math.sty
@@ -1,4 +1,4 @@
-%% Brackets
+%% --- Brackets ---
 
 \newcommand{\bc}[1]{\left\lbrace #1 \right\rbrace} 
 \newcommand{\bp}[1]{\left( #1 \right)} 
@@ -8,7 +8,7 @@
 \newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
 \newcommand{\of}[1]{{\left( #1 \right)}}
 
-%% Operators
+%% --- Operators ---
 
 \usepackage{xparse}
 
@@ -83,25 +83,29 @@
 \IfNoValueTF{#2}{\operatorname{\mathbb{P}}\IfValueT{#1}{_{#1}}}%
 {\,\mathbb{P}\IfValueT{#1}{_{#1}}{\bp{#2}}}}
 
-%% Derivatives
+%% --- Derivatives ---
 
-% Ordinary derivative
-\newcommand{\od}[2]{\frac{d #1}{d #2}}
-\newcommand{\odx}[2]{d #1/d #2}
+% Ordinary derivative in display
+\NewDocumentCommand{\od}{o g g}{%
+\frac{d\IfValueT{#1}{^{#1}} #2}{d #3\IfValueT{#1}{^{#1}}}}
+
+% Ordinary derivative in text
+\NewDocumentCommand{\odx}{o g g}{%
+d\IfValueT{#1}{^{#1}} #2/d #3\IfValueT{#1}{^{#1}}}
+
+% Partial derivative in display
+\NewDocumentCommand{\pd}{o g g g}{%
+\IfNoValueTF{#4}{\frac{\partial\IfValueT{#1}{^{#1}} #2}{\partial #3\IfValueT{#1}{^{#1}}}}%
+{\left.\frac{\partial\IfValueT{#1}{^{#1}} #2}{\partial #3\IfValueT{#1}{^{#1}}}\right\vert_{#4}}}
+
+% Partial derivative in text
+\NewDocumentCommand{\pdx}{o g g g}{%
+\IfNoValueTF{#4}{\partial\IfValueT{#1}{^{#1}} #2/\partial #3\IfValueT{#1}{^{#1}}}%
+{\left.\partial\IfValueT{#1}{^{#1}} #2/\partial #3\IfValueT{#1}{^{#1}}\right\vert_{#4}}}
 
 % Ordinary elasticity
 \renewcommand{\oe}[2]{\frac{d\ln{#1}}{d\ln{#2}}}
 \newcommand{\oex}[2]{d\ln(#1)/d\ln(#2)}
-
-% Partial derivative in display
-\NewDocumentCommand{\pd}{g g g}{%
-\IfNoValueTF{#3}{\frac{\partial #1}{\partial #2}}%
-{\left.\frac{\partial #1}{\partial #2}\right\vert_{#3}}}
-
-% Partial derivative in text
-\NewDocumentCommand{\pdx}{g g g}{%
-\IfNoValueTF{#3}{\partial #1/\partial #2}%
-{\left.\partial #1/\partial #2\right\vert_{#3}}}
 
 % Partial elasticity in display
 \NewDocumentCommand{\pe}{g g g}{%
@@ -113,13 +117,13 @@
 \IfNoValueTF{#3}{\partial\ln(#1)/\partial\ln(#2)}%
 {\left.\partial\ln(#1)/\partial\ln(#2)\right\vert_{#3}}}
 
-%% Statistical commands
+%% --- Statistical commands ---
 
 \DeclareMathOperator*{\ess}{ess}
 \newcommand{\iid}{\mathbin{\overset{iid}{\sim}}}
 \newcommand{\as}{\mathbin{\overset{as}{\to}}}
 
-%% Blackboard letters
+%% --- Blackboard letters ---
 
 \def\R{\mathbb{R}}
 \def\N{\mathbb{N}}
@@ -128,7 +132,7 @@
 \def\C{\mathbb{C}}
 \def\I{\mathbb{I}}
 
-%% Caligraphic letters
+%% --- Caligraphic letters ---
 
 \def\Ac{\mathcal{A}}
 \def\Bc{\mathcal{B}}
@@ -157,7 +161,7 @@
 \def\Yc{\mathcal{Y}}
 \def\Zc{\mathcal{Z}}
 
-%% Greek letters
+%% --- Greek letters ---
 
 \def\a{\alpha}
 \def\b{\beta}
@@ -193,14 +197,14 @@
 \def\X{\Xi}
 \def\z{\zeta}
 
-%% Accents
+%% --- Accents ---
 
 \newcommand{\ol}[1]{\overline{#1}}
 \newcommand{\ul}[1]{\underline{#1}}
 \newcommand{\wh}[1]{\widehat{#1}}
 \newcommand{\wt}[1]{\widetilde{#1}}
 
-%% Complex numbers
+%% --- Complex numbers ---
 
 \renewcommand{\Re}{\operatorname{Re}}
 \renewcommand{\Im}{\operatorname{Im}}
