Add inline version of absolute value, norm, floor

--- a/math.sty
+++ b/math.sty
@@ -4,8 +4,11 @@
 \newcommand{\bp}[1]{\left( #1 \right)} 
 \newcommand{\bs}[1]{\left[ #1 \right]} 
 \newcommand{\abs}[1]{\left\lvert #1 \right\rvert}
+\newcommand{\absx}[1]{\lvert #1 \rvert}
 \newcommand{\norm}[1]{\left\lVert #1 \right\rVert}
+\newcommand{\normx}[1]{\lVert #1 \rVert}
 \newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
+\newcommand{\floorx}[1]{\lfloor #1 \rfloor}
 \newcommand{\of}[1]{{\left( #1 \right)}}
 
 % --- Operators ---
