--- a/math.sty
+++ b/math.sty
@@ -137,6 +137,8 @@ d\IfValueT{#1}{^{#1}} #2/d #3\IfValueT{#1}{^{#1}}}
 \DeclareMathOperator*{\ess}{ess}
 \newcommand{\iid}{\mathbin{\overset{iid}{\sim}}}
 \newcommand{\as}{\mathbin{\overset{as}{\to}}}
+\newcommand{\plim}{\mathbin{\overset{p}{\to}}}
+\newcommand{\convd}{\mathbin{\overset{d}{\to}}}
 
 % --- Blackboard letters ---
 
